--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="home-content">
                     <h3>Claim Best Offer <br> On Fast <span>Food</span> & <span>Restaurant</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quibusdam minus. Ea accusamus rem numquam.</p>
-                    <a href="#our-menu" id="home-btn">Our Menu</a>
+                    <a href="./pages//menu.html" id="home-btn">Our Menu</a>
                 </div>
                 <div class="img">
                     <img src="./assets/images/image 46.png" alt="">
