3ra pre-entrega

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Foodie</title>
 
         <!-- STYLE CSS LINK -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <!-- STYLE CSS LINK -->
     
         <!-- BOOTSTRAP CDN LINK -->
@@ -27,8 +27,6 @@
     <header class="header-index">
         
             <nav class="navbar navbar-expand-sm" id="navbar">
-                <!-- <a href="index.html" class="navbar-brand" id="logo"><img src="./assets/images/logo.png" alt=""></a> -->
-                <h1>FOODIE</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                   <span><i class="fa-solid fa-bars"></i></span>
                 </button>
@@ -66,7 +64,7 @@
                 <div class="home-content">
                     <h3>Claim Best Offer <br> On Fast <span>Food</span> & <span>Restaurant</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quibusdam minus. Ea accusamus rem numquam.</p>
-                    <a href="./pages//menu.html" id="home-btn">Our Menu</a>
+                    <a href="./pages/menu.html" id="home-btn">Our Menu</a>
                 </div>
                 <div class="img">
                     <img src="./assets/images/image 46.png" alt="">
