--- a/pages/buy.html
+++ b/pages/buy.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css"/>
     <title>Compra</title>
   <!-- STYLE CSS LINK -->
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <!-- STYLE CSS LINK -->
 
   <!-- BOOTSTRAP CDN LINK -->
