--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
      <!-- STYLE CSS LINK -->
-     <link rel="stylesheet" href="../style.css">
+     <link rel="stylesheet" href="../css/style.css">
      <!-- STYLE CSS LINK -->
  
      <!-- BOOTSTRAP CDN LINK -->
