--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
             </section>
         <!-- Home Section End -->
 
+        <section>
+          <div class="grid-container">
+              <img src="./assets/images/img1.jpg.jpg" alt="Comida 5">
+              <img src="./assets/images/whitney-wright-6G98hiCJETA-unsplash.jpg" alt="Comida 6">
+              <img src="./assets/images/sam-moghadam-khamseh-yxZSAjyToP4-unsplash.jpg" alt="Comida 7">
+              <img src="./assets/images/img4.jpg.jpg" alt="Comida 8">
+          </div>
+      </section>
+
      <!-- Top Section Start -->
     <div class="top-section">
         <h5>WHAT WE SERVE</h5>
