--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </section>
         <!-- Home Section End -->
 
-        <section>
+        <section class="section2">
           <div class="grid-container">
               <img src="./assets/images/img1.jpg.jpg" alt="Comida 5">
               <img src="./assets/images/whitney-wright-6G98hiCJETA-unsplash.jpg" alt="Comida 6">
