--- a/pages/buy.html
+++ b/pages/buy.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <title>Compra</title>
-  <!-- STYLE CSS LINK -->
-  <link rel="stylesheet" href="../css/style.css">
-  <!-- STYLE CSS LINK -->
+    <title>Order - Foodie</title>
+    <meta name="description" content="Order a incredible food for you and your family and friends">
+    <meta name="keywords" content="food, order, delilvery, fast, restaurant, foodie">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Foodie">
 
-  <!-- BOOTSTRAP CDN LINK -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- BOOTSTRAP CDN LINK -->
-
-  <!-- FONT AWESOME CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <!-- FONT AWESOME CDN -->
-
-  <!-- GOOGLE FONTS LINK -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
-  <!-- GOOGLE FONTS LINK -->
+    <!-- STYLE CSS LINK -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- BOOTSTRAP CDN LINK -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- FONT AWESOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- GOOGLE FONTS LINK -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -106,20 +102,20 @@
   
     <!-- Footer Start -->
     <footer id="footer">
-        <div class="f-content">
-          <div class="f-logo">FOODIE</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure illo, facilis fugit quisquam nihil ipsa.</p>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-youtube"></i>
-          <i class="fa-brands fa-twitter"></i>
-        </div>
-        <br>
-        <div class="c-content">
-          <span>Designed By <a href="www.linkedin.com/in/juan-cruz-mambretti-a8a3a9281">Juan Cruz Mambretti</a></span>
-        </div>
-      </footer>
+      <div class="f-content">
+        <div class="f-logo">FOODIE</div>
+        
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-twitter"></i>
+      </div>
+      <br>
+      <div class="c-content">
+        <span> Designed By <a href="https://juancruzmambretti.netlify.app/" target="_blank">Juan Cruz Mambretti</a></span>
+      </div>
+    </footer>
       <!-- Footer End -->
       
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
