--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-     <!-- STYLE CSS LINK -->
-     <link rel="stylesheet" href="../css/style.css">
-     <!-- STYLE CSS LINK -->
- 
-     <!-- BOOTSTRAP CDN LINK -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     <!-- BOOTSTRAP CDN LINK -->
- 
-     <!-- FONT AWESOME CDN -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-     <!-- FONT AWESOME CDN -->
- 
-     <!-- GOOGLE FONTS LINK -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
-     <!-- GOOGLE FONTS LINK -->
+    <title>Contact Us - Foodie</title>
+    <meta name="description" content="Reach out to us on our Contact Us page for any inquiries or support needs you have. Our team is ready to assist you.">
+    <meta name="keywords" content="contact, support, customer service, inquiry, help, company name">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Foodie">
+
+    <!-- STYLE CSS LINK -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- BOOTSTRAP CDN LINK -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- FONT AWESOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- GOOGLE FONTS LINK -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header-index">
        
@@ -69,8 +68,8 @@
     <div class="row">
       <div class="col-md-5 py-3 py-md-0">
         <h3>Let's Get In Touch</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nobis, modi alias suscipit molestiae amet!</p>
-        <i class="fa-solid fa-phone"><span>9200000000000</span></i><br><br>
+        <p>Located in the heart of the city, our fast food restaurant is the go-to spot for delicious meals on the go. We’re open daily from 9 AM to 11 PM, ready to serve you the best in town.</p>
+        <i class="fa-solid fa-phone"><span>(123) 456-7890</span></i><br><br>
         <i class="fa-solid fa-envelope"><span>info@mail.com</span></i><br><br>
         <i class="fa-solid fa-location-dot"><span>Buenos Aires, Argentina</span></i>
       </div>
@@ -102,21 +101,21 @@
     </main>
 
         <!-- Footer Start -->
-<footer id="footer">
-    <div class="f-content">
-      <div class="f-logo">FOODIE</div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure illo, facilis fugit quisquam nihil ipsa.</p>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-brands fa-youtube"></i>
-      <i class="fa-brands fa-twitter"></i>
-    </div>
-    <br>
-    <div class="c-content">
-      <span>Designed By <a href="www.linkedin.com/in/juan-cruz-mambretti-a8a3a9281">Juan Cruz Mambretti</a></span>
-    </div>
-  </footer>
+        <footer id="footer">
+          <div class="f-content">
+            <div class="f-logo">FOODIE</div>
+            
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+          <br>
+          <div class="c-content">
+            <span> Designed By <a href="https://juancruzmambretti.netlify.app/" target="_blank">Juan Cruz Mambretti</a></span>
+          </div>
+        </footer>
   <!-- Footer End -->
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
